--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Oluwajon</a>.
+      Coded by <a href="https://github.com/oluwajon">Oluwajon</a>.
     </p>
   </footer>
   <!-- Bootstrap js mdn -->
